[package]
name = "theorem-prover"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Implementation of a theorem prover for first-order logic."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
derivative = "2.2.0"
log = "0.4.20"
log4rs = "1.2.0"
pest = "2.7.5"
pest_derive = "2.7.5"
